--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Nick's birthday 🎉</h1>
+            <h1>Today is mothers Day 🎉</h1>
             <img id="bff-img" src="images/m.jpg">
-            <h2 id="bday-age">24 years old</h2>
+            <h2 id="bday-age">19-03-2023</h2>
             <h4 id="bday-date">01.11.2022</h4>
         </div>
         
